test/corpus/permissions.txt

================================================================================
permission
================================================================================
permission member = creator
--------------------------------------------------------------------------------
(source_file
      (body
        (permission
        (permission_literal)
        (identifier)
          (perm_expression
            (identifier)
            (identifier)))))


================================================================================
permission with plus
================================================================================
permission member = creator + parent
--------------------------------------------------------------------------------
 (source_file
     (body
       (permission
         (permission_literal)
         (identifier)
         (perm_expression
         (identifier)
         (identifier)
         (plus_literal)
         (identifier)))))




================================================================================
permission with plus extra
================================================================================
permission member = creator + parent + parent->create_folder
--------------------------------------------------------------------------------
 (source_file
     (body
       (permission
        (permission_literal)
         (identifier)
         (perm_expression
         (identifier)
         (identifier)
         (plus_literal)
         (identifier)
         (plus_literal)
         (identifier)
         (stabby)
         (identifier)))))
